<resources>
    <string name="app_name">Расписание</string>
    <string name="marsh_sled">Маршрут следования:</string>
    <string name="tehnich_info">Техническая информация:</string>
    <string name="ostanovok">Остановок:</string>
    <string name="perevoz">Компания-перевозчик:</string>
    <string name="bt_otrk_v_navigatore">Открыть в навигаторе</string>
    <string name="phone">Телефон:</string>
    <string name="address_kompanii">Адрес:</string>
    <string name="check_news">Обновление</string>
    <string name="check_news_description">Уведомлять об изменении расписания</string>
</resources>
