<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detals_marsh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.bus.raspisanie.shalk_off.raspisanie_bus.Activitys.DetalsMarshActivity"
    android:orientation="vertical"
    android:background="#f2f2f2">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rr1"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/marsh_sled"
        android:textStyle="normal|bold"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/marsh_sled"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/marsh_sled"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rr1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/tehnich_info"
        android:textStyle="normal|bold"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teh_info"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/marsh_sled"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/ostanovok"
        android:textStyle="normal|bold"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ostanovok"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/marsh_sled"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rr1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/perevoz"
        android:textStyle="normal|bold"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/perevoschik"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/marsh_sled"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/address_kompanii"
        android:textStyle="normal|bold"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/marsh_sled"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/phone"
        android:textStyle="normal|bold"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/telephone"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:text="@string/marsh_sled"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
